# CanLinBoard

./: .gitignore  .gitmodules  BootloaderProtocol.cs  Brief.txt  CLAUDE.md  CMakeLists.txt  CanAdapterRegistry.cs  CanBus.Adapters.csproj  FeatureRequirements.cs  FreeRTOS_Kernel_import.cmake  KvaserService.cs  ProtocolConstants.cs  README.md  SlcanService.cs
Canalyzer/GatewayTester/: GatewayTester.cfg  GatewayTester.stcfg
Datasheets/DBCandLDFexamples/: CAN_LWS7.dbc  LIN_C_Ver3.6.ldf  PPT_CWA_50_100_400_mod.ldf
Models/: BootloaderInfo.cs  CanTraceFrame.cs  ConfigParameter.cs  EnumeratedDevice.cs
config/: FreeRTOSConfig.h
docs/: CHANGELOG.md  CanLinBoard.dbc  ROADMAP.md  implementation-plan.md
docs/BootloaderReference/: application-development-guide.md
docs/superpowers/plans/: 2026-03-21-firmware-update.md  2026-03-22-config-mutex.md
docs/superpowers/specs/: 2026-03-21-firmware-update-design.md  2026-03-22-config-mutex-design.md
firmware/: CMakeLists.txt
firmware/config/: FreeRTOSConfig.h
firmware/include/: app_header.h  board_config.h
firmware/linker/: app.ld
firmware/src/: main.c
firmware/src/can/: can_bus.h  can_manager.c  can_manager.h
firmware/src/config/: config_handler.c  config_handler.h  config_protocol.h  nvm_config.c  nvm_config.h
firmware/src/diag/: bus_watchdog.c  bus_watchdog.h  diagnostics.c  diagnostics.h  fault_handler.c  fault_handler.h
firmware/src/gateway/: gateway_engine.c  gateway_engine.h
firmware/src/hal/: hal_clock.h  hal_flash_nvm.c  hal_flash_secondary.c  hal_flash_secondary.h  hal_spi.h
firmware/src/lin/: lin_bus.h  lin_manager.c  lin_manager.h  sja1124_driver.c  sja1124_driver.h
firmware/src/util/: crc32.c  crc32.h
firmware/tests/: TEST_GUIDE.md  test_bug_1_1.py  test_bug_1_2.py  test_bug_1_3.py  test_bug_1_4.py
firmware/tests/common/: pcan_helper.py
firmware/tests/phase0/: test_build.py
firmware/tests/phase1/: test_can_minimal.c  test_hal.c  test_hal_host.py
firmware/tests/phase2/: test_can.c  test_can_host.py
firmware/tests/phase3/: test_lin.c  test_lin_host.py
firmware/tests/phase4/: test_gateway.c  test_gateway_host.py
firmware/tests/phase4_5/: test_diag.c  test_diag_host.py
firmware/tests/phase5/: test_nvm_config.c  test_nvm_config_host.py
firmware/tests/phase6/: test_diagnostics.c  test_diagnostics_host.py
include/: board_config.h
lib/CanBus.Abstractions/: CanBus.Abstractions.csproj  ICanAdapter.cs  IProtocolTransport.cs  ProtocolException.cs
lib/CanBus.Abstractions/Models/: DebugMessage.cs  DeviceIdentity.cs  DeviceStatus.cs  DiscoveredDevice.cs
lib/CanBus.Adapters/: PcanService.cs  VectorService.cs
lib/CanBus.Protocol/: CanBus.Protocol.csproj
linker/: app.ld
software/: CanLinConfig.sln  TEST_GUIDE.md  TEST_PLAN_PROFILES.md  USER_GUIDE.md
software/CanLinConfig/: App.xaml  App.xaml.cs  CanLinConfig.csproj
software/CanLinConfig/Adapters/: CanFrame.cs  ICanAdapter.cs  KvaserAdapter.cs  PcanAdapter.cs  SlcanAdapter.cs  VectorXlAdapter.cs
software/CanLinConfig/Helpers/: Crc32.cs
software/CanLinConfig/Models/: AppHeader.cs  BitMapping.cs  ByteMapping.cs  DfwContainer.cs  LinScheduleEntry.cs  RoutingRule.cs
software/CanLinConfig/Parsers/: DbcParser.cs  LdfParser.cs
software/CanLinConfig/Profiles/Devices/: Cwa400Pump.json  WdaWiper.json
software/CanLinConfig/Protocol/: ConfigProtocol.cs  ProtocolConstants.cs
software/CanLinConfig/Services/: AdapterFactory.cs  ConfigFileService.cs  FirmwareUpdateService.cs  FirmwareUpdateSettings.cs
software/CanLinConfig/ViewModels/: CanConfigViewModel.cs  DiagConfigViewModel.cs  DiagnosticsViewModel.cs  FirmwareUpdateViewModel.cs  LinConfigViewModel.cs  MainViewModel.cs  ProfileEditorViewModel.cs  ProfilesViewModel.cs  RoutingViewModel.cs
software/CanLinConfig/Views/: CanConfigView.xaml  CanConfigView.xaml.cs  DbcImportDialog.xaml  DbcImportDialog.xaml.cs  DiagConfigView.xaml  DiagConfigView.xaml.cs  DiagnosticsView.xaml  DiagnosticsView.xaml.cs  FirmwareUpdateWindow.xaml  FirmwareUpdateWindow.xaml.cs  LdfImportDialog.xaml  LdfImportDialog.xaml.cs  LinConfigView.xaml  LinConfigView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProfileEditorWindow.xaml  ProfileEditorWindow.xaml.cs  ProfilesView.xaml  ProfilesView.xaml.cs  RoutingView.xaml  RoutingView.xaml.cs
src/: app_header.c
src/can/: can_bus.h
src/hal/: hal_clock.c  hal_flash_nvm.h  hal_gpio.c  hal_gpio.h  hal_spi.c
src/lin/: sja1124_driver.c  sja1124_driver.h  sja1124_regs.h
tests/: GATEWAY_TEST_PROTOCOL.md  TEST_GUIDE.md  gateway_test.can  gateway_test_config.json
tests/common/: pcan_helper.py
tests/phase0/: test_build.py
tests/phase2/: test_can.c
tests/phase3/: test_lin.c
tools/: patch_header.py
